Almost finish
Updated the sholarly html with everybody
Updated all the information online
Deployed application
Edited front-end
