# openAPI.yaml
@@ -29,22 +29,18 @@ paths:
     get:
       tags:
       - Cointology
-      summary: Returns current value of all coins
+      summary: Returns all coins
       operationId: getCoin
       produces:
       - application/json
       parameters:
-      - name: firstNo
-        in : query
-        type: string
-        description: Get only the top X ( where X is firstNo ) of coins.
-      - name: page
+      - name: limit
         in: query
-        description: The page number
+        description: Item limit, default 25
         type: string
-      - name: pageNo
+      - name: format
         in: query
-        description: Items per page
+        description: Format of output (JSON-LD, XML etc) JSON-LD default
         type: string
       responses:
         200:
@@ -55,54 +51,15 @@ paths:
                 $ref: '#/definitions/Coin'
         400 :
           description: invalid parameters provided
-    post:
-      tags:
-      - Cointology
-      summary: Create new coin
-      operationId: createCoin
-      produces:
-      - application/json
-      parameters:
-      - in: body
-        name: body
-        description: Created coin object
-        required: true
-        schema:
-          $ref: '#/definitions/Coin'
-      responses:
-        default:
-          description: successful operation
-  /cointology/createWithArray:
-    post:
-      tags:
-      - Cointology
-      summary: Creates list of coins with given input array
-      operationId: createCoinWithArrayInput
-      produces:
-      - application/json
-      parameters:
-      - in: body
-        name: body
-        description: List of coin object
-        required: true
-        schema:
-          type: array
-          items:
-            $ref: '#/definitions/Coin'
-      responses:
-        default:
-          description: successful operation
-        400 :
-          description: Invalid input provided
-  /cointology/{coin-id}:
+  /cointology/{abbreviation}:
     get:
       tags:
       - Cointology
-      summary: Get coin from the system using id
+      summary: Get coin from the system using abbreviation
       parameters:
-      - name: coin-id
+      - name: abbreviation
         in: path
-        description: Coin Id
+        description: Coin Id of coin (BTC)
         required: true
         type : string
       produces:
@@ -116,56 +73,23 @@ paths:
                 $ref: '#/definitions/Coin'
         400:
           description: Invalid coin id supplied
-    put:
-      tags:
-      - Cointology
-      summary: Updated coin
-      operationId: updateCoinById
-      produces:
-      - application/json-id
-      parameters:
-      - name: coin-id
-        in: path
-        description: Coin Id
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: List of coin object
-        required: true
-        schema:
-          type: array
-          items:
-            $ref: '#/definitions/Coin'
-      responses:
-        200:
-          description: successful operation
-        400:
-          description: Invalid coin id supplied
-  /plot:
+  /news:
     get:
       tags:
-      - Plot
-      summary: Provides data for the price evolution chart
-      operationId: priceChart
+      - News
+      summary: Get latest news
       produces:
       - application/json
       parameters:
-      - name: page
+      - name: limit
         in: query
-        description: The page number
+        description: Number of news to return. 25 Default.
+        required: false
         type: string
-      - name: pageNo
+      - name: format
         in: query
-        description: Items per page
-        type: string
-      - name: startDate
-        in: query
-        description: The start date for the data.
-        type: string
-      - name: endDate
-        in: query
-        description: The end date for the data.
+        description: Format of output (JSON-LD, XML etc) JSON-LD default
+        required: false
         type: string
       responses:
         200:
@@ -173,21 +97,46 @@ paths:
           schema:
             type: array
             items :  
-              $ref: '#/definitions/PlotData'
-        400:
-          description: Invalid input provided
-  /plot/{coin-id}:
+              $ref: '#/definitions/News'
+  /news/coin/{abbreviation}:
+    get:
+      tags:
+      - News
+      summary: Get news by coin abbreviation
+      produces:
+      - application/json
+      parameters:
+      - name: abbreviation
+        in: path
+        description: The news that needs to be fetched by abbreviation. (BTC)
+        required: true
+        type: string
+      - name: limit
+        in: query
+        description: The number of news to return, 25 by default
+        required: false
+        type: string
+      - name: format
+        in: query
+        description: Format of output (JSON-LD, XML etc) JSON-LD default
+        required: false
+        type: string
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: '#/definitions/News'
+  /plot/{abbreviation}:
     get:
       tags:
       - Plot
       summary: Provides data for the price evolution chart
-      operationId: getCoinValueById
       produces:
       - application/json
       parameters:
-      - name: coin-id
+      - name: abbreviation
         in: path
-        description : The coin id that is searched.
+        description : The coin abbreviation that is searched (BTC)
         required : true
         type: string
       - name: startDate
@@ -200,87 +149,33 @@ paths:
         description: The end date for the data.
         required: true
         type: string
+      - name: format
+        in: query
+        description: Format of output (JSON-LD, XML etc) JSON-LD default
+        required: false
+        type: string
       responses:
         200:
           description: successful operation
           schema:
             type: array
             items :  
-              $ref: '#/definitions/PlotData'
-        400:
-          description : Invalid data provided
-  /plot/pieChartDistrib:
+              $ref: '#/definitions/CoinValue'
+  /coin:
     get:
       tags:
       - Plot
-      summary: Provides data for the distribution of main cryptocurrencies chart
-      operationId: pieChart
+      summary: Returns all coins, with all values and detailed instruction on how to use links
       produces:
       - application/json
-      responses:
-        200:
-          description: successful operation
-          schema:
-            type: array
-            items :  
-              $ref: '#/definitions/PlotData'
-  /news/getLatest:
-    get:
-      tags:
-      - News
-      summary: Get latest news
-      operationId: getLatest
-      produces:
-      - application/json
-      parameters: []
-      responses:
-        200:
-          description: successful operation
-          schema:
-            type: array
-            items :  
-              $ref: '#/definitions/News'
-  /news/coin/{coinId}:
-    get:
-      tags:
-      - News
-      summary: Get coin by coin id
-      operationId: getNewsByCoin
-      produces:
-      - application/json
-      parameters:
-      - name: coinId
-        in: path
-        description: The news that needs to be fetched by id.
-        required: true
-        type: string
-      responses:
-        200:
-          description: successful operation
-          schema:
-            $ref: '#/definitions/News'
-        400:
-          description: Invalid coin id supplied
-        404:
-          description: Coin id not found
-  /news/page:
-    get:
-      tags:
-      - News
-      summary: Get a specific news page.
-      produces:
-      - application/json
-      operationId: getCoinPage
       parameters:
       - name: page
         in: query
-        description: The page number.
-        required: true
+        description: The page number
         type: string
-      - name: itemNo
+      - name: size
         in: query
-        description: How many news per page.
-        required: true
+        description: Items per page
         type: string
       responses:
         200:
@@ -288,135 +183,190 @@ paths:
           schema:
             type: array
             items :  
-              $ref: '#/definitions/News'
-        400:
-          description: Invalid input provided
-  /coinconversion/{name}:
+              $ref: '#/definitions/TopCoin'
+    post:
+      tags:
+      - Plot
+      summary: Create a new top coin
+      produces:
+      - application/json
+      responses:
+        200:
+          description: successful operation
+          schema:
+            type: array
+            items :  
+              $ref: '#/definitions/TopCoin'
+  /coin/{coin-id}:
     get:
       tags:
-      - Coin Conversion
-      summary: Get coin by name
-      operationId: getCoinByName
+      - Plot
+      summary: Provides data for the top currency chart for a specific coin by coin-id
       produces:
       - application/json
       parameters:
-      - name: name
+      - name: coin-id
         in: path
-        description: The name that needs to be fetched.
-        required: true
+        description : The coin id that is searched.
+        required : true
         type: string
       responses:
         200:
           description: successful operation
           schema:
-            $ref: '#/definitions/CoinValue'
-        400:
-          description: Invalid name supplied
-        404:
-          description: Coin not found
-  /coinconversion/uri/{uri}:
-    get:
+            type: array
+            items :  
+              $ref: '#/definitions/TopCoin'
+    delete:
       tags:
-      - Coin Conversion
-      summary: Get coin by URI
-      operationId: getCoinByUri
+      - Plot
+      summary: delete existing coin
       produces:
       - application/json
       parameters:
-      - name: uri
+      - name: coin-id
         in: path
-        description: The URI that needs to be fetched. 
-        required: true
+        description : The coin id that is searched.
+        required : true
         type: string
       responses:
         200:
           description: successful operation
           schema:
-            $ref: '#/definitions/CoinValue'
-        400:
-          description: Invalid URI supplied
-        404:
-          description: URI not found
+            type: array
+            items :  
+              $ref: '#/definitions/TopCoin'
+  /predict/{abbreviation}:
+    get:
+      tags:
+      - Plot
+      summary: Provides data for the price evolution prediction values for a specific coin
+      produces:
+      - application/json
+      parameters:
+      - name: abbreviation
+        in: path
+        description : The coin abbreviation that is searched.
+        required : true
+        type: string
+      responses:
+        200:
+          description: successful operation
+          schema:
+            type: array
+            items :  
+              $ref: '#/definitions/Prediction'
 definitions:
   Coin:
     type: object
-    required:
-    - id
-    - name
     properties:
-      id:
-        type: integer
-        format: int64
-        example : 1234
-      name : 
+      abbreviation : 
         type : string
         example : BTC
-      logo :
-        type : string
-      website :
-        type : string
-        example : https://bitcoin.org
-      typeOf : 
-        type : string
-      priceHistory :
-        type: array
-        items:
-            $ref : '#/definitions/CoinValue'
-    xml:
-      name: Coin
-  PlotData:
-    type: object
-    required:
-    - id
-    - unixTime
-    - value
-    - name
-    - uri
-    properties:
-      id:
-        type: integer
-        format: int64
-        example: 1234
-      unixTime:
-        type : integer
-        format : int64
-        example : 1510562162 
-      name:
-        type: string
-        example : BTC
-      value:
+      capital :
         type : integer
         format : float
-        example : 14.5
-      uri:
-        type : string
-        example : http://dbpedia.org/page/Bitcoin
+        example: 1.92156418192E11
+      supply :
+        type : integer
+        format : float
+        example: 1.6825275E7
+      change :
+        type : integer
+        format : float
+        example: 3.68
+      price :
+        type : integer
+        format : float
+        example: 11420.7
+      volume :
+        type : integer
+        format : float
+        example: 1.08833E10
+      values :
+        type : array
+        items:
+                $ref: '#/definitions/CoinValue'
     xml:
-      name: PlotData
+      name: Coin
   CoinValue:
     type: object
     required:
+    - abbreviation
+    - value
+    - dateTime
+    properties:
+      abbreviation : 
+        type : string
+        example : BTC
+      value :
+        type : integer
+        format : float
+        example: 123
+      dateTime :
+        type: string
+        example: "2018-01-12T21:32:52+02:00"
+    xml:
+      name: CoinValue
+  TopCoin:
+    type: object
+    required:
     - id
     - name
-    - value
-    - uri
+    - marketCap
+    - price
+    - supply
+    - volume
+    - change
     properties:
       id:
         type: integer
-        format: float
-        example : 1234
+        format: int64
+        example: 1234 
       name:
         type: string
         example : BTC
+      marketCap:
+        type : integer
+        format : float
+        example : 14.5
+      price:
+        type : integer
+        format : float
+        example : 15.6
+      supply:
+        type : integer
+        format : float
+        example : 15.6
+      volume:
+        type : integer
+        format : float
+        example : 50  
+      change:
+        type : integer
+        format : float
+        example : 15.6
+    xml:
+      name: TopCoin
+  Prediction:
+    type: object
+    required:
+    - abbreviation
+    - value
+    - date
+    properties:
+      abbreviation:
+        type: string
+        example : "BTC"
       value:
         type : integer
         format : float
-        example : 6800
-      uri:
-        type : string
-        example : http://dbpedia.org/page/Bitcoin
+        example : 1234
+      dateTime:
+        type: string
+        example : "2018-01-12T21:32:52+02:00"
     xml:
-      name: CoinValue
+      name: Prediction
   News:
     type: object
     required:
@@ -426,31 +376,23 @@ definitions:
     - shortText
     - longText
     properties:
-      id:
-        type: integer
-        format: int64
-        example : 1234
-      title:
+      name:
         type: string
         example: Bitcoin Cash Skyrockets
-      urlSource:
+      url:
         type : string
         example : https://www.forbes.com/sites/laurashin/2017/11/12/bitcoin-cash-skyrockets-bitcoin-price-drops-as-civil-war-continues/#1f26873e35b5
-      shortText :
-        type : string
-        example: The surge by Bitcoin Cash led it to overtake Ethereum in market capitalization to $40 billion and become the second-largest crypto
-      longText :
+      description :
         type : string
         example : The surge by Bitcoin Cash led it to overtake Ethereum in market capitalization to $40 billion and become the second-largest crypto [...]
-      photoUrls:
+      date :
         type: string
-        example : https://specials-images.forbesimg.com/imageserve/748531060/960x0.jpg?fit=scale
+        example: "2018-01-12T21:32:52+02:00"
     xml:
       name: News
 externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
-# Added by API Auto Mocking Plugin
 host: virtserver.swaggerhub.com
 basePath: /cipriancus1/CryMa/1.0.0
 schemes:
